master|feature: add errors code & gateway auth mw
