# api/openapi/gateway/v1/gateway.swagger.json
@@ -16,8 +16,79 @@
     "application/json"
   ],
   "paths": {
+    "/v1/miners": {
+      "post": {
+        "summary": "CreateMiner",
+        "operationId": "Gateway_CreateMiner",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          }
+        ],
+        "tags": [
+          "Gateway"
+        ]
+      }
+    },
+    "/v1/minersets": {
+      "post": {
+        "summary": "CreateMinerSet",
+        "operationId": "Gateway_CreateMinerSet",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          }
+        ],
+        "tags": [
+          "Gateway"
+        ]
+      }
+    },
     "/version": {
       "get": {
+        "summary": "GetVersion",
         "operationId": "Gateway_GetVersion",
         "responses": {
           "200": {
